# vulcans_limes

./: .gitignore  .gitmodules  Cargo.toml  Installation.md  LICENSE  PreSetup  README.md  gradle.properties  local.properties  settings.gradle.kts
app/: .gitignore  build.gradle.kts  run.ps1  run.sh
app/src/androidTest/java/com/example/keystorestuffs/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/samsungknoxvaultdev/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/vulcans_limes/: ExampleInstrumentedTest.java
app/src/androidTest/java/vulcans_limes/: ExampleInstrumentedTest.java  ExampleUnitTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/keystorestuffs/: MainActivity.java
app/src/main/java/com/example/samsungknoxvaultdev/: MainActivity.kt
app/src/main/java/com/example/vulcans_limes/: CryptoManager.java  MainActivity.java  RustDef.java
app/src/main/java/vulcans_limes/: CryptoManager.java  MainActivity.java  RustDef.java
app/src/main/res/layout/: activity_main.xml  dialog_layout.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/rust/: Cargo.toml  lib.rs
app/src/test/java/com/example/keystorestuffs/: ExampleUnitTest.java
app/src/test/java/com/example/samsungknoxvaultdev/: ExampleUnitTest.kt  noahtestet.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: HelloWorld.java
(+5 files in other folders)
