[package]
name = "vulcanslimes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld"
path = "src/HelloWorld.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-layer = { git = "https://github.com/nmshd/rust-crypto.git" }
